# sdmarkov

./: LICENSE  README.md  attractors.py  basic_analysis.csv  basic_analysis.ipynb  basins.py  buildsdmarkovchain.ipynb  decisions.py  draft_attractors.ipynb  draft_basin_ratios.ipynb  draft_block_and_decisions.ipynb  draft_convergence.ipynb  draft_convergence_prob.ipynb  draft_decisions.ipynb  draft_node_average_values.ipynb  draft_path_probabilites.ipynb  draft_strong_basins.ipynb  example.ipynb  graph.py  grouping.py  helper.py  markovchain.ipynb  matrix_operations.py  paths.py  pyproject.toml  random_nk.ipynb  random_nk_attractors.ipynb  random_nk_basin_ratios.ipynb  random_nk_convergence.ipynb  random_nk_convergence_prob.ipynb  random_nk_decisions.ipynb  random_nk_node_average_values.ipynb  random_nk_paths.ipynb  random_nk_strong_basins.ipynb  reachability.py  scc_dags.py  succession_diagram.py  test_attractors.py  test_basins.py  test_decisions.py  (+12 more)
notebooks/: attractor_convergence.ipynb  attractor_states.ipynb  average_node_values.ipynb  basic_analysis.ipynb  basin_fractions.ipynb  decision_transitions.ipynb  example.ipynb  generate_models.ipynb  node_average_values.ipynb  strong_and_weak_basins.ipynb  strong_basins.ipynb  trajectories.ipynb
results/: attractor_convergence.csv  attractor_states.csv  average_node_values.csv  basic_analysis.csv  basin_fractions.csv  decision_transitions.csv  strong_basins.csv  trajectories.csv
tests/: test_attractors.py  test_basins.py  test_decisions.py  test_graph.py  test_grouping.py  test_helper.py  test_matrix_operations.py  (+4 more)
(+972 files in other folders)
