[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Kyu Hyong Park", email = "kjp5774@psu.edu" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "ipykernel",
    "biobalm",
    "pyboolnet @ git+https://github.com/hklarner/pyboolnet",
]